name:                chess
version:             0.1.0.0
synopsis:            a chess app 
description:         u can play chess vs the computer 
license:             BSD3
license-file:        LICENSE
author:              Kai Hofmann 
maintainer:          addata@web.de
copyright:           2020, Kai Hofmann 
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library chessLib
  ghc-options:         -Werror
  exposed-modules:     Util ChessData MoveGen PrettyPrint 
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && <5
  default-language:    Haskell2010

executable chess
  ghc-options:         -Werror
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && <5,
                       containers,
                       chessLib
  default-language:    Haskell2010


